2020-12-25 [1.42 Bld 187]

Bugfix        : add a couple of missing instructions and
                instruction/operand combinations to Z8000 target

2020-12-21 [1.42 Bld 186]

- Addition    : add -q(uiet) command line switch to PLIST and support
                multiple files
- Addition    : Support Z8000 as target
- Addition    : add -splitbyte command line switch

2020-12-09 [1.42 Bld 185]

- Addition    : Add compatibility mode switch for better compatibility
                with original assemblers on certain targets

2020-12-08 [1.42 Bld 184]

- Change      : Output generated by MESSAGE to console is suppressed
                in quiet mode
- Addition    : Add configurable maximum include nesting level
- Addition    : add -q(uiet) command line switch to P2BIN and P2HEX
- Change      : 'make test' now runs in quiet mode on *IX systems, set V=1
                to get verbose output back
- Addition    : Optimize SUB #(-2...+2),... to ADD:Q only if Q format requested

2020-12-03 [1.42 Bld 183]

- Bugfix      : Disallow optimzation to CoMPare 8-bit immediate value with
                16-bit operand on H8/500

2020-11-26 [1.42 Bld 182]

- Bugfix      : Better treatment of (mis)detection of non-octal constants
                in relaxed mode
- Bugfix      : If whole instruction has dot prefix, still search for
                attribute in it

2020-11-25 [1.42 Bld 181]

- Addition    : Support :8 and :16 instruction formats for branches on H8/500
- Bugfix      : Some fixes to H'xxxx hex syntax on H8/500 and H8/300
- Bugfix      : correct TLCS-90 MUL/DIV with immediate addressing

2020-11-18 [1.42 Bld 180]

- Addition    : Support Toshiba TLCS-870/C as target
- Bugfix      : do not search relative to current file's path if (B)INCLUDEd
                file's path is absolute

2020-11-08 [1.42 Bld 179]

- Bugfix      : MCS-48: correctly regard forward references when checking
                memory bank of CALL/JMP target

2020-11-04 [1.42 Bld 178]
