@@ -202,7 +202,8 @@
 \hline
 \tin{ACE}       & 4K$^{4}$ &   ---   &   ---   &   ---   &   ---   &   ---   &   ---   &   ---  & --- & --- \\
 \hline
-\tin{F8}       & 4K$^{4}$ &   64    &   ---   &   ---   &   ---   &   ---   &   256   &   ---  & ---  & --- \\
+\tin{F3850}     & 64K    &   64    &   ---   &   ---   &   ---   &   ---   &   256   &   ---  & ---  & --- \\
+\tin{F8}        & 4K     &   64    &   ---   &   ---   &   ---   &   ---   &   256   &   ---  & ---  & --- \\
 \hline
 \tin{$\mu$PD}   & 64K     &   ---   &   ---   &   ---   &   ---   &   ---   &   ---   &   ---  & ---  & --- \\
 \tin{78(C)10}   &         &         &         &         &         &         &         &        &      &     \\
