@@ -3788,12 +3788,13 @@ bq) ACE1101, ACE1202
 \end{quote}
 %%-----------
 \begin{quote}
-br) MK3870, MK3872, MK3873, MK3874, MK3875, MK3876, \\
-    MK38C70
+br) F3850, MK3870, MK3872, MK3873, MK3874, MK3875, \\
+    MK3876, MK38C70
 \end{quote}
 Der Befehlssatz aller F8-Varianten ist identisch, mit Ausnahme
 der CMOS-Version, die zwei neue Befehle (HET und HAL) kennt.
-Ansonsten unterscheiden sie sich nur in der Menge des eingebauten
+Ansonsten unterscheiden sie sich nur in der Gr"o"se des Adre"sraumes
+(64K f"ur F3850, 4K f"ur den Rest), der Menge des eingebauten
 Speichers (2 oder 4 KByte ROM, 64 Byte Executable RAM oder nicht)
 und in der eingebauten Peripherie (mit serieller Schnittstelle
 oder ohne).
