@@ -3693,12 +3693,13 @@ bq) ACE1101, ACE1202
 \end{quote}
 %%-----------
 \begin{quote}
-br) MK3870, MK3872, MK3873, MK3874, MK3875, MK3876, \\
-    MK38C70
+br) F3850, MK3870, MK3872, MK3873, MK3874, MK3875, \\
+    MK3876, MK38C70
 \end{quote}
-The instruxction st of all F8 variants is the same, except for the
- CMOS version than knows two new instructions (HET and HAL).
-Otherwise, they only differ by the amount of built-in memory (2 or
+The instruction set of all F8 variants is the same, except for the
+CMOS version than knows two new instructions (HET and HAL).
+Otherwise, they differ by the size of the address space (64K for
+F3850, 4K for the rest), the amount of built-in memory (2 or
 4 Kbytes of ROM, 64 bytes of executable RAM or not) and the
 integrated peripherals (with or without serial port).
 %%-----------
